# ResearchMethods

./: README.md  narps_behav_data.csv  narps_data_prep.py  pyproject.toml
Data/DET/: README.md  data_reorg.py  det_expt1_all.csv
Data/HumanPenguinProject/: HPP_stress_items.csv  README.md
Data/MARP/: README.md
Data/ManyLabs1/: README.md
Data/NARPS/: narps_behav_data.csv  narps_data_prep.py
Data/NLS79/: README.md  default.csv
Data/SRO/: all_data_wide.csv
Demos/Categorization/: README.md
Demos/NARPS_behav/: Psych125_gambling_decision_demo.ipynb  gambling_decision_demo.ipynb  narps_behav_analysis.py  prospect_theory.py
Exercises/yardstick/: yardstick_analysis.Rmd
Notebooks/: Psych125_Measurement.ipynb  load_install_packages.R
Notebooks/tests/: week4_tests.R  week6_tests.R  week8_tests.R
src/psych125/: prospect_theory.py
